tests/NormalTests/paczka1/fuzzy1/56467985.err
Error in line 1: A280 A676 12,6
Error in line 10: bgpxW A280 57,6
Error in line 7: kCWHRc S892 11,9
Error in line 6: 7OzXfx A509 76,9
Error in line 25: 7b3M A509 18,8
Error in line 31: bijZM54d A280 81,1
Error in line 29: 7b3M A676 14,7
